--- a/village/src/App.css
+++ b/village/src/App.css
@@ -3,18 +3,18 @@
 }
 
 nav {
-  border-bottom: 2px solid #3F96E2;
-  margin: 35px 0 75px 0;
-  padding-bottom: 35px;
+  border-bottom: 5px solid grey;
+  padding: 35px 0 35px 0;
   display: flex;
   justify-content: space-between;
+  background-color: #3F96E2;
 }
 
 .navHeader {
   margin: 0 0 0 50px;
   font-size: 50px;
   font-weight: bold;
-  color: #3F96E2;
+  color: white;
 }
 
 .navLinks {
@@ -27,7 +27,7 @@ nav {
 
 .navLinks a {
   text-decoration: none;
-  color: #3F96E2;
+  color: white;
   font-size: 20px;
   font-weight: bold;
 }
