--- a/village/src/components/Smurf.css
+++ b/village/src/components/Smurf.css
@@ -2,22 +2,20 @@
     display: flex;
     flex-direction: column;
     align-items:center;
-}
-
-.Smurfs h1 {
-    margin: 0 0 25px 35px;
-    font-size: 40px;
-    color: #3F96E2;
+    background-image: url('http://i.imgur.com/DOOTCfR.jpg');
+    background-size: cover;
+    height: 1000px;
 }
 
 .Smurf {
     display: flex;
     flex-direction: column;
-    border: 3px solid grey;
+    border: 2px solid grey;
     width: 400px;
     height: 175px;
-    margin: 0 0 25px 0;
+    margin: 50px 0 0 0;
     background-color: #3F96E2;
+    opacity: .7
 }
 
 .Smurf h3 {
@@ -35,6 +33,7 @@
 .SmurfForm {
     display: flex;
     justify-content: center;
+    margin-top: 75px;
 }
 
 .SmurfForm form {
