--- a/village/src/components/Smurf.css
+++ b/village/src/components/Smurf.css
@@ -30,6 +30,12 @@
     margin: 0;
 }
 
+.Smurf i {
+    display: flex;
+    justify-content: flex-end;
+    margin: 15px 15px 0 0;
+}
+
 .SmurfForm {
     display: flex;
     justify-content: center;
