--- a/village/src/App.css
+++ b/village/src/App.css
@@ -3,7 +3,7 @@
 }
 
 nav {
-  border-bottom: 5px solid grey;
+  border-bottom: 3px solid white;
   padding: 35px 0 35px 0;
   display: flex;
   justify-content: space-between;
@@ -28,12 +28,12 @@ nav {
 .navLinks a {
   text-decoration: none;
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
 }
 
 .navLinks a:hover {
-  font-size: 26px;
+  font-size: 22px;
 }
 
 
