--- a/village/src/components/Smurf.css
+++ b/village/src/components/Smurf.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     border: 1px solid white;
     width: 400px;
-    height: 175px;
+    height: 185px;
     margin: 50px 0 0 0;
     background-color: #3F96E2;
     opacity: .75
@@ -20,14 +20,18 @@
 
 .Smurf h3 {
     margin: 25px 0 25px 0;
+    font-size: 24px;
 }
 
 .Smurf strong {
     margin: 0 0 25px 0;
+    font-size: 16px;
 }
 
 .Smurf p {
     margin: 0;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .Smurf i {
